Changelog 0.0.8:
- Fixed movies not working in AniList watchlist
- Fixed scrape and rescrape running twice
- Updated anime season for upcoming and trending menu items

Changelog 0.0.7:
- Improved cloud inspection
- Adjusted 'Next Up'
- Adjusted 'Rebuild Database'
- Fixed gogo embed
- Fixed new episodes not being added

Changelog 0.0.6:
- Added Premiumize and Real-Debrid cloud inspection
- Added setting 'Seperate Dubs and Subs' to seperate anime into sub and dub list items if dub is available (test flight)
- Added instruction dialog for MAL/AniList auth for linux os
- Adjusted set titles to romaji/english
- Adjusted Tertiary Dub filter
- Improved 'Next Up'
- Improved season torrent pack scraping

Changelog 0.0.5:
- Fixed bug

Changelog 0.0.4:
- Fixed bug

Changelog 0.0.3:
- Added Rescrape Item option to episode context menu
- Added setting 'Title Language' to set titles to romaji/english
- Added 'Airing Dubbed Anime' menu item
- Added 'Next Up' to watchlist menu items
- Adjusted content types of items
- Adjusted MAL/AniList auth for linux os
- Improved season torrent pack handling

Changelog 0.0.2:
- Added premiumize support
- Improved handling of episodes/seasons retrieval
- Improved nyaa search
- Added 'episodes' content type to set menu content type setting
- Added menu content type to be applied to watchlist landing page

Changelog 0.0.1
- Initial Release