@@ -1,3 +1,13 @@
+Changelog 0.1.1 [20220823]:
+Add info meta for episodes
+Add search plugin path for AH2 skin
+plugin://plugin.video.otaku/search_results/?query=
+
+
+Changelog 0.1.0 [20220820]:
+- Matrix Compatible
+- Fix Alldebrid access
+
 Changelog 0.0.8:
 - Fixed movies not working in AniList watchlist
 - Fixed scrape and rescrape running twice
